--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@
                             <span>Value: 10</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description"><strong>Popular Demand</strong>. <br>When drawn, give a random ingredient +5 <strong>Ethereal.</strong></p>
+                        <p class="menu-card-description"><strong>Popular Demand</strong>. <br>When drawn, give a random ingredient <strong>Ethereal.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-rare">Epic / Rare</div>
@@ -1351,6 +1351,7 @@
 </body>
 
 </html>
+
 
 
 
