--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                             <span>Value: 4</span>
                             <span>Cook Time: 1</span>
                         </div>
-                        <p class="menu-card-description">When the doors close, <br>gain <strong>Tempt All 1</strong> and <br><strong>Popular Demand</strong>. <br>(Tempt to speed up by 1 turn).</p>
+                        <p class="menu-card-description">On Turn 5, <br>gain <strong>Tempt All 1</strong> and <br><strong>Popular Demand</strong>. <br>(Tempt to speed up by 1 turn).</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / </div>
@@ -1351,6 +1351,7 @@
 </body>
 
 </html>
+
 
 
 
