--- a/index.html
+++ b/index.html
@@ -1212,7 +1212,7 @@
                     <div class="menu-card-details">
                         <h4>Dopplebangers and Mash</h4>
                         <div class="menu-card-stats">
-                            <span>Energy: 2</span>
+                            <span>Energy: 3</span>
                             <span>Value: 7</span>
                             <span>Cook Time: 1</span>
                         </div>
@@ -1232,7 +1232,7 @@
                             <span>Value: 2</span>
                             <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description">Give dishes on the right get +8 value.<br>Give dishes on the left -1 cooktime.</strong></p>
+                        <p class="menu-card-description">Give dishes on the right +8 value.<br>Give dishes on the left -1 cooktime.</strong></p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Vegetable</div>
@@ -1351,6 +1351,7 @@
 </body>
 
 </html>
+
 
 
 
