--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@
                             <span>Value: 10</span>
                             <span>Cook Time: 0</span>
                         </div>
-                        <p class="menu-card-description">3 Zingy. <br>Ignores customer abilities. <br>Customers can't refuse.</p>
+                        <p class="menu-card-description">Fulfills ALL desires. <br>Customers can't refuse.</p>
                     </div>
                     <div class="card-footer">
                         <div class="card-rarity rarity-epic">Epic / Meat</div>
@@ -1351,6 +1351,7 @@
 </body>
 
 </html>
+
 
 
 
